[package]
name = "quictest"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.8.5"
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
rcgen = "0.9.2"
anyhow = "1.0.65"
tokio = { version = "1.17", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
futures-util = { version = "0.3.11", default-features = false, features = ["io"] }
